--- a/NumPy Mini-Project/Mean Normalization and Data Separation.ipynb
+++ b/NumPy Mini-Project/Mean Normalization and Data Separation.ipynb
@@ -17,17 +17,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1000, 20)\n"
+     ]
+    }
+   ],
    "source": [
     "# import NumPy into Python\n",
-    "\n",
+    "import numpy as np\n",
     "\n",
     "# Create a 1000 x 20 ndarray with random integers in the half-open interval [0, 5001).\n",
-    "X = \n",
+    "X = np.random.randint(5001,size=(1000,20))\n",
     "\n",
-    "# print the shape of X\n"
+    "# print the shape of X\n",
+    "print(X.shape)"
    ]
   },
   {
@@ -43,15 +52,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Average of the values in each column of X\n",
-    "ave_cols =\n",
+    "ave_cols =np.mean(X,axis=0)\n",
     "\n",
     "# Standard Deviation of the values in each column of X\n",
-    "std_cols ="
+    "std_cols = np.std(X,axis=0)"
    ]
   },
   {
@@ -63,14 +72,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20,)\n",
+      "(20,)\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the shape of ave_cols\n",
+    "print(ave_cols.shape)\n",
     "\n",
-    "\n",
-    "# Print the shape of std_cols\n"
+    "# Print the shape of std_cols\n",
+    "print(std_cols.shape)"
    ]
   },
   {
@@ -82,12 +101,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Mean normalize X\n",
-    "X_norm ="
+    "X_norm = np.divide(np.subtract(X,ave_cols),std_cols)"
    ]
   },
   {
@@ -99,17 +118,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2789769243681803e-17\n",
+      "-1.734071362462047\n",
+      "1.728107746504092\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the average of all the values of X_norm\n",
-    "\n",
+    "print(X_norm.mean())\n",
     "\n",
     "# Print the average of the minimum value in each column of X_norm\n",
+    "print(np.mean(np.min(X_norm,axis=0)))\n",
     "\n",
-    "\n",
-    "# Print the average of the maximum value in each column of X_norm\n"
+    "# Print the average of the maximum value in each column of X_norm\n",
+    "print(np.mean(np.max(X_norm,axis=0)))"
    ]
   },
   {
@@ -235,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
