Numpy Mini-Project

--- a/NumPy Mini-Project/Mean Normalization and Data Separation.ipynb
+++ b/NumPy Mini-Project/Mean Normalization and Data Separation.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -126,8 +126,8 @@
      "output_type": "stream",
      "text": [
       "1.2789769243681803e-17\n",
-      "-1.734071362462047\n",
-      "1.728107746504092\n"
+      "-1.7343824694422634\n",
+      "1.7507054937070514\n"
      ]
     }
    ],
@@ -165,9 +165,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 4, 2, 0, 1])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# We create a random permutation of integers 0 to 4\n",
     "np.random.permutation(5)"
@@ -184,12 +195,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a rank 1 ndarray that contains a random permutation of the row indices of `X_norm`\n",
-    "row_indices ="
+    "row_indices = np.random.permutation(X_norm.shape[0])"
    ]
   },
   {
@@ -201,22 +212,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Make any necessary calculations.\n",
     "# You can save your calculations into variables to use later.\n",
     "\n",
-    "\n",
+    "training_idx, validation_indx, test_idx = row_indices[:600],\\\n",
+    "                                          row_indices[600:800], row_indices[800:]\n",
     "# Create a Training Set\n",
-    "X_train =\n",
+    "X_train = X_norm[training_idx]\n",
     "\n",
     "# Create a Cross Validation Set\n",
-    "X_crossVal =\n",
+    "X_crossVal =X_norm[validation_indx]\n",
     "\n",
     "# Create a Test Set\n",
-    "X_test ="
+    "X_test =X_norm[test_idx]"
    ]
   },
   {
@@ -228,17 +240,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(600, 20)\n",
+      "(200, 20)\n",
+      "(200, 20)\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the shape of X_train\n",
-    "\n",
+    "print(X_train.shape)\n",
     "\n",
     "# Print the shape of X_crossVal\n",
+    "print(X_crossVal.shape)\n",
     "\n",
-    "\n",
-    "# Print the shape of X_test\n"
+    "# Print the shape of X_test\n",
+    "print(X_test.shape)"
    ]
   },
   {
@@ -265,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
